--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+:root{
+    --branco-principal: #FFFFFF;
+    --cinza-secundario: #C0C0C0;
+    --botao-azul: #167bf7;
+    --cor-de-fundo: #00030C;
+    --fonte-principal: 'Inter';
+}
+
+
+
 *{
     padding:0;
     margin: 0;
@@ -98,6 +108,16 @@ width: 35;
     margin: 0 16px;
     font-size: 20px;
 }
+    .container-botao{
+
+        background-color: var(--botao-azul);
+        border-radius: 5px;
+        padding: 1em;
+        color: var(--branco-principal);
+        display: block;
+        text-decoration: none;
+    }
+
 .agricultura-precisao{
     background-image: rgb(47, 78, 16);
     color: rgb(10, 12, 12);
@@ -135,6 +155,16 @@ width: 35;
 .agricultura-precisao-imagem-dois{
     width: 20%;
 }
+.container-botao{
+
+    background-color: var(--botao-azul);
+    border-radius: 5px;
+    padding: 1em;
+    color: var(--branco-principal);
+    display: block;
+    text-decoration: none;
+}
+
 .rodape{
 background-color: black;
 text-align: center;
