--- a/style.css
+++ b/style.css
@@ -13,30 +13,36 @@
     margin: 0;
 
 }
-header{background-color: rgb(34, 77, 50);
-    color: aliceblue;
+header{
+    background:#002400 ;
+    color:white;
     display: flex;
     justify-content: space-around;
   align-items: center;
   padding: 24px 0;
 }
 
+
 .Cabeçalho-imagem{
     width: 14%;
 }
 .Cabeçalho-lista-item{
-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+text-decoration:none;
 display: inline-block;
 margin: 0 16px;
+padding: 20px 0;
 font-size: 24px 0;
+font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+
 } 
 
 .tecnologia-imagem{
     width: 24%;
 }
 .tecnologia{
-    background-color:rgb(32, 75, 48) ;
-    color: rgb(5, 1, 1);
+    background-image: linear-gradient(#002400,#053b03);
+    color:white;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -46,12 +52,14 @@ font-size: 24px 0;
 width: 35;
 }
 .tecnologia-titulo{
+   
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     padding: 20px 0;
     margin: 0 16px;
 
 }
 .tecnologia-subtitulo{
+   
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     padding: 24px 0;
     margin: 0 16px;
@@ -73,12 +81,14 @@ width: 35;
     width: 24%;
 }
 .agricultura{
-    background-color: rgb(31, 80, 50);
-    color: rgb(34, 126, 126);
+    background-image: linear-gradient(#0a5206,#106809);
+    
+    color:white;
     display: flex;
     justify-content: center;
     align-items: center;
     padding:24px 0;
+  
    
 
 }
@@ -91,105 +101,122 @@ width: 35;
 .agricultura-div-conteudo{
     width: 35;
 }
+
 .agricultura-titulo{
+    
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     padding: 20px 0;
     margin: 0 16px;
 
 }
+
 .agricultura-subtitulo{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+   
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     padding: 30px 0;
     margin: 0 16px;
 
 }
+
 .agricultura-texto-um{
     padding: 24px 0;
     margin: 0 16px;
     font-size: 20px;
 }
+
 .agricultura-texto-dois{
     padding: 24px 0;
     margin: 0 16px;
     font-size: 20px;
 }
-    .container-botao{
 
-        background-color: var(--cor-de-fundo);
+    .container-botao{
+        background-color:var(--cor-de-fundo);
         border-radius: 5px;
         padding: 1em;
         color: var(--branco-principal);
         display: block;
         text-decoration: none;
+        font-family: Arial, Helvetica, sans-serif;
+
+       
     }
 
 .agricultura-precisao{
-  background-color: rgb(31, 80, 50);
-    color: rgb(10, 12, 12);
+  background-color: rgb(19, 75, 19);
+    color:white;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 24px 0;
     
 }
+
 .agricutura-precisao-div-conteudo{
     width: 35;
 }
+
 .agricultura-precisao-titulo{
+   
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     padding: 20px 0;
     margin: 0 16px;
 }
+
 .agricultura-precisao-texto-um{
     padding: 24px 0;
     margin: 0 16px;
     font-size: 20px;
 }
+
 .agricultura-precisao-texto-dois{
     padding: 24px 0;
     margin: 0 16px;
     font-size: 20px;
 }
+
 .agricultura-precisao-texto-tres{
-    padding: 24px 0;
-    margin: 0 16px;
-    font-size: 20px;
-}
-.agricultura-precisao-imagem-um{
-    width: 24%;
-    margin: 0 16px;
-}
-.agricultura-precisao-imagem-dois{
-    width: 20%;
-}
-.container-botao-um{
-  background-color: var(--cor-de-fundo);
-  border-radius: 5px;
-  padding: 5px;
-  color: var(--branco-principal);
-  display:block;
-  text-decoration: none;
-}
-.perguntas{
-    background-color: rgb(31, 80, 50);
-    color: rgb(46, 148, 148);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 24px 0;
-}
-.perguntas-titulo{
-font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     padding: 20px 0;
-    margin: 0 16px;
-}
-.perguntas-texto{
-    font-family: initial;
-    padding: 24px 0;
     margin: 0 16px;
     font-size: 20px;
 }
 
+.container-botao-um{
+    background-color: var(--cor-de-fundo);
+    border-radius: 5px;
+    padding: 1em;
+    color: var(--branco-principal);
+    display: block;
+    text-decoration: none;
+   
+}
+
+.agricultura-precisao-imagem-um{
+    width: 24%;
+    margin: 0 16px;
+}
+
+.agricultura-precisao-imagem-dois{
+    width: 20%;
+}
+
+.perguntas{
+    background-color: rgb(19, 79, 19);
+    color:white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 24px 0;
+    
+}
+
+.perguntas-titulo{
+    color: white;
+    text-size-adjust:0 16;
+    padding: 20px 0;
+    margin: 0 16px;
+    
+}
 .container-botao-dois{
 
     background-color: var(--cor-de-fundo);
@@ -198,6 +225,7 @@ font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans
     color: var(--branco-principal);
     display: block;
     text-decoration: none;
+  
 }
 
 
