--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ width: 35;
         border-radius: 5px;
         padding: 1em;
         color: var(--branco-principal);
-        display: block;
+       display: inline-block;
         text-decoration: none;
         font-family: Arial, Helvetica, sans-serif;
        
@@ -165,7 +165,7 @@ width: 35;
     border-radius: 5px;
     padding: 1em;
     color: var(--branco-principal);
-    display: block;
+    display: inline-block;
     text-decoration: none;
    
 }
